<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Views</string>

    <string name="activity_main_name">Main Activity</string>
    <string name="activity_main_toolbar_title">Toolbar Title</string>

    <string name="activity_settings_name">Settings Activity</string>

    <string name="fragment_detail_buy">Buy</string>
    <string name="fragment_detal_action_refresh">Refresh</string>
    <string name="fragment_detal_action_add">Add</string>

    <string name="notification_title">Item ordered</string>
    <string name="notification_text">The selected item has been ordered and will be shipped in a week.</string>

    <string name="dialog_about_title">About</string>
    <string name="dialog_about_message">This is Example18 app which demonstrates usage of toasts, notifications, dialogs, preferences, toolbars and navigation drawers</string>
    <string name="dialog_about_yes">OK</string>
    <string name="dialog_about_no">Cancel</string>

    <string name="pref_sync">pref_sync</string>
    <string name="pref_sync_title">Allow Sync</string>
    <string name="pref_sync_summ">Allow app to sync data automatically if Wi-fi is available</string>
    <string name="pref_syncConnectionType">Sync interval</string>
    <string name="pref_sync_list">pref_sync_list</string>

    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_home_long">Show All Products</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_Settings_long">Change App Settings</string>
    <string name="drawer_about">About</string>
    <string name="drawer_about_long">About Us</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="dialog_name">Name</string>
    <string name="dialog_description">Description</string>
    <string name="dialog_rating">Rating</string>
    <string name="image">Image</string>
    <string name="dialog_category">Category</string>
    <string name="dialog_title_insert_data">Dialog for inserting data in table</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel dialog</string>
    <string name="dialog_message_no">You didn\'t insert new product.</string>

</resources>