<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:minHeight="200dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_name"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_description"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_rating"
        android:textSize="20sp"/>
    <RatingBar
        android:id="@+id/rb_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numStars="5"/>
  <!--  <EditText
        android:id="@+id/product_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image"
        android:textSize="20sp"/>
   
    <Spinner
        android:id="@+id/sp_dialog_images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


    </Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_category"
        android:textSize="20sp"/>

    <Spinner
        android:id="@+id/sp_dialog_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </Spinner>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_ok"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cancel"/>




    </LinearLayout>





</LinearLayout>